--- a/schriftliche ausarbeitung/bib.bib
+++ b/schriftliche ausarbeitung/bib.bib
@@ -59,12 +59,6 @@
   year = {1990}
 }
 
-@MISC{wikiCosineSimilarity,
-  author = {Wikipedia},
-  title = {Cosine Similarity},
-  year = {27 March 2013 at 10:24}
-}
-
 @ARTICLE{historyOfSVD,
   author = {G. W. Stewart},
   title = {On the Early History of the Singular Value Decomposition},
@@ -72,11 +66,15 @@
   year = {1993}
 }
 
-@Book{numericalLinearAlgebra,
-  title = {Numerical Linear Algebra},
-  publisher = {Springer},
-  year = {2008},
-  author = {Allaire, Grégoire and Kaber, Sidi Mahmoud}
+@book{numericalLinearAlgebra,
+  title={Numerical Linear Algebra},
+  author={Allaire, G. and Kaber, S.M.},
+  isbn={9780387689180},
+  lccn={2007939527},
+  series={Texts in applied mathematics},
+  url={http://books.google.de/books?id=PlUWqQzY-4EC},
+  year={2008},
+  publisher={Springer-Verlag New York}
 }
 
 @Book{matrixAlgorithms,
@@ -95,17 +93,41 @@
     pages = {5--53}
 }
 
+@MISC{wikiCosineSimilarity,
+  author = {Cosine Similarity --- {W}ikipedia{,} The Free Encyclopedia},
+  title = {Cosine Similarity},
+  url = {http://en.wikipedia.org/wiki/Cosine_similarity},
+  note = "[Online; accessed 27-March-2013 at 10:24]",
+  year = "2013",
+}
+
 @misc{wiki:lorem,
    author = "Wikipedia",
    title = "Lorem ipsum --- {W}ikipedia{,} The Free Encyclopedia",
    year = "2013",
    url = "http://en.wikipedia.org/wiki/Lorem_ipsum",
-   note = "[Online; accessed 03-June-2013]"
+   note = "[Online; accessed 03-June-2013 at 15:34]"
  }
+
+@MISC{wiki:levenshteinDistance,
+  author = {Levenshtein Distance --- {W}ikipedia{,} The Free Encyclopedia},
+  title = {Levenshtein distance},
+  url = {http://en.wikipedia.org/wiki/Levenshtein_distance},
+  note = "[Online; accessed 11-June-2013 at 12:43]",
+  year = "2013",
+}
+
+@MISC{wiki:scala,
+  author = {Scala Programming Language --- {W}ikipedia{,} The Free Encyclopedia},
+  title = {Scala Programming Language distance},
+  url = {http://en.wikipedia.org/wiki/Scala_(programming_language)#Companies},
+  note = "[Online; accessed 11-June-2013 at 17:53]",
+  year = "2013",
+}
 
 @misc{benchmark2010,
   title = {Benchmarking triple stores with biological data},
-  author = {Mironov, Vladimir and Seethappan, Nirmala and Blondé, Ward and Antezana, Erick and Lindi, Bjørn and Kuiper, Martin},
+  author = {Mironov, Vladimir and Seethappan, Nirmala and Blond\'{e}, Ward and Antezana, Erick and Lindi, Bjorn and Kuiper, Martin},
   year = {2010}
 }
 
@@ -250,14 +272,21 @@ booktitle = {Proceedings of Scala Days 2011}
   address = {Center für Digitale Systeme, Freie Universität Berlin}
 }
 
+@INPROCEEDINGS{Sarwar02incrementalsingular,
+    author = {Badrul Sarwar and George Karypis and Joseph Konstan and John Riedl},
+    title = {Incremental Singular Value Decomposition Algorithms for Highly Scalable Recommender Systems},
+    booktitle = {Fifth International Conference on Computer and Information Science},
+    year = {2002},
+    pages = {27--28}
+}
+
 @book{englishLinguistics,
  author={Kortmann, Bernd},
  title={English linguistics - essentials},
  edition={English ed., 1. Aufl., 5. Druck},
  address={Berlin},
  publisher={Cornelsen},
- year={2006 [erschienen] 2011},
- pages={312 S.},
+ year={2011},
  isbn={978-3-464-31162-2},
  series={Studium kompakt : Anglistik - Amerikanistik ; System use},
  note={Nebensacht.: Linguistics - essentials},
@@ -266,3 +295,11 @@ booktitle = {Proceedings of Scala Days 2011}
  library={UB [Signatur:LA-I 22-22167::(N)]},
 }
 
+@book{thiessen2009pluralbildung,
+  title={Die Pluralbildung Im Deutschen: Eine Untersuchung an Hand Der Optimalit{\"a}tstheorie},
+  author={Thie{\ss}en, E.},
+  isbn={9783640439096},
+  url={http://books.google.de/books?id=S4FjEHuR2mkC},
+  year={2009},
+  publisher={GRIN Verlag}
+}
