--- a/schriftliche ausarbeitung/bib.bib
+++ b/schriftliche ausarbeitung/bib.bib
@@ -101,9 +101,17 @@
   year = "2013",
 }
 
+@MISC{wiki:truncated,
+  author = {Truncated Mean --- {W}ikipedia{,} The Free Encyclopedia},
+  title = {Truncated Mean},
+  url = {http://en.wikipedia.org/wiki/Truncated_mean},
+  note = {[Online; accessed 10-June-2013 at 11:24]},
+  year = {2013},
+}
+
 @misc{wiki:lorem,
-   author = "Wikipedia",
-   title = "Lorem ipsum --- {W}ikipedia{,} The Free Encyclopedia",
+   author = "Lorem ipsum --- {W}ikipedia{,} The Free Encyclopedia",
+   title = {Lorem ipsum},
    year = "2013",
    url = "http://en.wikipedia.org/wiki/Lorem_ipsum",
    note = "[Online; accessed 03-June-2013 at 15:34]"
