--- a/schriftliche ausarbeitung/bib.bib
+++ b/schriftliche ausarbeitung/bib.bib
@@ -72,7 +72,6 @@
   isbn={9780387689180},
   lccn={2007939527},
   series={Texts in applied mathematics},
-  url={http://books.google.de/books?id=PlUWqQzY-4EC},
   year={2008},
   publisher={Springer-Verlag New York}
 }
@@ -110,8 +109,8 @@
 }
 
 @misc{wiki:lorem,
-   author = "Lorem ipsum --- {W}ikipedia{,} The Free Encyclopedia",
-   title = {Lorem ipsum},
+   author = "Lorem Ipsum --- {W}ikipedia{,} The Free Encyclopedia",
+   title = {Lorem Ipsum},
    year = "2013",
    url = "http://en.wikipedia.org/wiki/Lorem_ipsum",
    note = "[Online; accessed 03-June-2013 at 15:34]"
@@ -310,4 +309,14 @@ booktitle = {Proceedings of Scala Days 2011}
   url={http://books.google.de/books?id=S4FjEHuR2mkC},
   year={2009},
   publisher={GRIN Verlag}
+}
+
+@book{axler1997linear,
+  title={Linear Algebra Done Right},
+  author={Axler, S.},
+  isbn={9780387982588},
+  lccn={97016664},
+  series={Undergraduate Texts in Mathematics},
+  year={1997},
+  publisher={Springer}
 }
